--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -8,6 +8,18 @@ ru:
         src: '/img/titles/default.png'
         width: '1082'
         height: '324'
+      bio: 
+        src: '/img/titles/about.png'
+        width: '995'
+        height: '307'
+      legacy: 
+        src: '/img/titles/about.png'
+        width: '995'
+        height: '307'
+      award-condition: 
+        src: '/img/titles/about-award.png'
+        width: '1010'
+        height: '264'
   views:
 
     subscribers:
