--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -8,18 +8,67 @@ ru:
         src: '/img/titles/default.png'
         width: '1082'
         height: '324'
-      bio: 
+        body_class: ''
+      about-plastov: &about-plastov 
         src: '/img/titles/about.png'
         width: '995'
         height: '307'
-      legacy: 
-        src: '/img/titles/about.png'
-        width: '995'
-        height: '307'
-      award-condition: 
+        body_class: 'page-about'
+      gallery:
+        <<: *about-plastov
+      expositions:
+        <<: *about-plastov
+      legacy:
+        <<: *about-plastov
+
+      about-award: &about-award
         src: '/img/titles/about-award.png'
         width: '1010'
         height: '264'
+        body_class: 'page-about-award'
+      award-info:
+        <<: *about-award
+      governor-order:
+        <<: *about-award
+      award-condition:
+        <<: *about-award
+      last-winners:
+        <<: *about-award
+      committee:
+        <<: *about-award
+      jury:
+        <<: *about-award
+        
+      participation: &participation
+        src: '/img/titles/participation.png'
+        width: '872'
+        height: '357'
+        body_class: ''
+      how-to-join:
+        <<: *participation
+      contacts:
+        <<: *participation
+        
+      news: &news
+        src: '/img/titles/news.png'
+        width: '871'
+        height: '363'
+        body_class: ''
+      smi:
+        <<: *news
+        
+      members-gallery:
+        src: '/img/titles/gallery.png'
+        width: '963'
+        height: '360'
+        body_class: ''
+        
+      ask-question:
+        src: '/img/titles/ask-question.png'
+        width: '1095'
+        height: '388'
+        body_class: ''
+        
   views:
 
     subscribers:
