--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -125,6 +125,9 @@ de:
     subscribers:
       success_subscribe: 'Спасибо за вашу подписку!'
       
+    news:
+      back_btn: "Rückwärts"
+      
     sessions:
       user_successfully_logged_in: "Аутентификация прошла успешно!"
       invalid_email_or_password: "Неверное имя пользователя или пароль!"
