fix translations and feedback form

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -171,6 +171,13 @@ de:
           title: "Редактирование страницы"
 
   activerecord:
+    errors:
+      models:
+        feedback:
+          attributes:
+            email:
+              email: "E-mail not valid"
+
     state_machines:
       news:
         published: "Опубликована"
