--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -125,6 +125,7 @@ ru:
       governor_review: |
         Ассамблеи художников «Пластовская осень» является одним из центральных событий Международного культурного форума.  Это еще один шаг на пути к популяризации творческого наследия великого живописца, сохранения уникальной творческой среды, которая питала талант Аркадия Пластова. Международная выставка художников «Пластовская осень»  и вручение Пластовской премии решают одну из  важнейших государственных задач - это  сохранение традиций великой русской художественной школы. Пластовская премия приобрела статус международной и стала весомее, и это еще раз подчеркивает наше стремление к культурному сотрудничеству со странами СНГ, Европы и Мира. Под эгидой «Премии Пластова»  на родине мастера собираются его последователи, чтобы подчеркнуть – традиции реалистичного искусства живы и не имеют национальных границ. Убеждены, что премия им.А.А.Пластова может стать своего рода «Нобелевской премией для живописи»
       governor_footer: "Губернатор Ульяновской области:  Сергей Морозов."
+      logo_footer: '/img/logo-footer1.jpg'
 
     subscribers:
       success_subscribe: 'Спасибо за вашу подписку!'
